--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,17 +8,17 @@ jobs:
     # owner/repository of workflow has to be static, see https://github.community/t/env-variables-in-uses/17466
     uses: eike-hass/workflow-test/.github/workflows/embedded.yml@master
   result:
-    needs: call-embedded
     runs-on: ubuntu-latest
+    needs: call-embedded
     steps:
       - name: test
         run: |
-            echo ${{ needs.call-embedded.test1 }}
-            echo ${{ needs.call-embedded.test2 }}
-            echo ${{ needs.call-embedded.test3 }}
-            echo ${{ needs.call-embedded.test4 }}
-            echo ${{ needs.call-embedded.test1 && 'is truthy' }}
-            echo ${{ needs.call-embedded.test1 == true && 'is truthy' }}
-            echo ${{ needs.call-embedded.test1 == 'true' && 'is truthy' }}
+            echo ${{ needs.call-embedded.outputs.test1 }}
+            echo ${{ needs.call-embedded.outputs.test2 }}
+            echo ${{ needs.call-embedded.outputs.test3 }}
+            echo ${{ needs.call-embedded.outputs.test4 }}
+            echo ${{ needs.call-embedded.outputs.test1 && 'is truthy' }}
+            echo ${{ needs.call-embedded.outputs.test1 == true && 'is truthy' }}
+            echo ${{ needs.call-embedded.outputs.test1 == 'true' && 'is truthy' }}
 
 
